--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,26 @@
+* {
+	box-sizing: border-box;
+	margin: 0px;
+	padding: 10px;
+	font-family: 'Roboto', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  text-align: center;
+
+}
+
+form {
+  background-color: lightgray;
+  margin: 10px
+}
+
+
+body {
+  border: 1px black solid;
+	margin-top: 65px;
+	text-align: center;
 }
