--- a/src/components/recipes-results-page.css
+++ b/src/components/recipes-results-page.css
@@ -1,5 +1,5 @@
 .recipes {
-  margin-top: 100px;
-  border: 1px gray solid;
-  color: black
+  margin-top: 50px;
+  /* border: 1px gray solid; */
+  color: black;
 }
