--- a/src/components/food-container.css
+++ b/src/components/food-container.css
@@ -1,3 +1,44 @@
-li {
-  border: 1px black solid
+.food-container {
+  padding: 10px;
+  display: inline-block;
+  width: 50%;
+  /* margin: 0px 0px; */
+  /* border: 1px black solid; */
+  border-radius: 5px;
+  vertical-align: top;
+
+}
+
+h1.container-name {
+  padding: 10px;
+  border: none
+}
+
+.food-container ul {
+  /* border: 1px black solid; */
+  padding: 10px;
+}
+
+.food-item {
+  padding: 10px;
+  list-style: none;
+  text-align: left;
+  width: 100%;
+  display: inline-block;
+  line-height: 35px;
+  margin-top: 5px;
+  background-color: lightgray;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.food-item-buttons {
+  float: right;
+  /* border: 1px black solid; */
+  margin-top: 0
+}
+
+.food-item-button {
+  margin-left: 5px
 }
