--- a/src/components/recipe-page.css
+++ b/src/components/recipe-page.css
@@ -1,4 +1,106 @@
+
 .recipe-page {
   display: inline-block;
-  margin-top: 80px
+  margin: 120px 10px;
+  padding: 20px;
+  /* border: 1px black solid; */
+}
+
+.recipe-page h1, .recipe-page p {
+  padding: 10px
+}
+
+.ingredient {
+  text-align: left;
+  padding: 5px;
+  list-style: none;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ingredients ul {
+  padding: 10px;
+}
+
+.ingredients {
+  padding: 20px 10px 10px;
+  background-color: lightgray;
+  border-radius: 5px;
+  min-height: 270px;
+}
+
+.recipe-image, .ingredients {
+  display: inline-block;
+  margin: 15px;
+  width: 45%;
+  vertical-align: middle;
+}
+
+.instructions {
+  padding: 15px;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 92%;
+  border: 2px lightgray solid;
+  border-radius: 5px;
+}
+
+.instructions div {
+  padding: 10px
+}
+
+@media only screen and (max-width: 768px) {
+  .recipe-image {
+    max-height: 300px;
+		width: auto;
+	}
+
+  .ingredients, .instructions {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* .ingredients ul, .ingredients h3 {
+    padding: 10px 20px;
+  } */
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px)
+and (max-device-width : 768px) {
+/* Styles */
+
+  .recipe-page {
+    width: 100%
+  }
+  .recipe-image {
+    max-height: 300px;
+    max-width: 100%;
+  }
+  .ingredients, .instructions, .recipe-image {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+/*
+  .ingredients ul, .ingredients h3 {
+    padding: 10px 20px;
+  } */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width : 768px) and
+(max-device-width : 1024px) and (orientation : landscape) {
+/* Styles */
+
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width : 768px) and
+(max-device-width : 1024px) and (orientation : portrait) {
+/* Styles */
+
 }
