--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,68 @@
 * {
 	box-sizing: border-box;
 	margin: 0px;
-	padding: 10px;
+	/* padding: 10px; */
 	font-family: 'Roboto', sans-serif;
 }
 
 body {
-  margin: 0;
+	width: 100%;
   padding: 0;
   font-family: sans-serif;
   text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	/* background: url('./cocina.gif') repeat; */
+
 }
 
 form {
-  background-color: lightgray;
-  margin: 10px
+  background-color: #e24e42;
+	border-radius: 5px;
+  margin: 10px;
+	padding: 20px
 }
 
-body {
-  border: 1px black solid;
-	margin-top: 65px;
-	text-align: center;
+button {
+	background-color: white;
+	font-size: 12px;
+	padding: 10px;
+}
+
+
+
+@media only screen and (max-width: 1024px) {
+  .col-4 {
+		width: 45%
+	}
+}
+
+@media only screen and (max-width: 600px) {
+  .food-container {
+		width: 100%
+	}
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px)
+and (max-device-width : 768px) {
+/* Styles */
+
+.food-container {
+	width: 100%
+}
+
+}
+
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width : 768px) and
+(max-device-width : 1024px) and (orientation : landscape) {
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width : 768px) and
+(max-device-width : 1024px) and (orientation : portrait) {
+/* Styles */
 }
