--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -34,6 +34,13 @@ header {
   font-size: 12px
 }
 
+.form-error {
+  /* border: 1px black solid; */
+  /* display: inline-block; */
+  /* position: absolute; */
+  color: white;
+  font-size: 10px
+}
 
 @media only screen and (max-width: 768px) {
 
