--- a/src/components/food-container.css
+++ b/src/components/food-container.css
@@ -27,7 +27,7 @@ h1.container-name {
   display: inline-block;
   line-height: 35px;
   margin-top: 5px;
-  background-color: lightgray;
+  background-color:  #c6ecc6;
   border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
