--- a/src/components/food-container.css
+++ b/src/components/food-container.css
@@ -20,12 +20,12 @@ h1.container-name {
 }
 
 .food-item {
-  padding: 10px;
+  padding: 20px 20px 5px ;
   list-style: none;
   text-align: left;
   width: 100%;
   display: inline-block;
-  line-height: 35px;
+  line-height: 25px;
   margin-top: 5px;
   background-color:  #c6ecc6;
   border-radius: 5px;
@@ -40,5 +40,14 @@ h1.container-name {
 }
 
 .food-item-button {
-  margin-left: 5px
+  margin-left: 10px;
+  /* padding: 10px; */
+  width: 25px;
+  border: 1px black solid
+}
+
+.delete-button {
+  margin-left: 10px;
+  width: 25px;
+  /* border: 1px black solid */
 }
