--- a/src/components/nav-bar.css
+++ b/src/components/nav-bar.css
@@ -1,5 +1,6 @@
 .nav-bar * {
 	/* border: 1px black solid */
+
 }
 
 .nav-bar {
@@ -39,6 +40,7 @@
 }
 
 .title {
+	font-family: 'Bungee Shade', cursive;
 	padding: 0px
 }
 
