--- a/src/components/recipe-page.css
+++ b/src/components/recipe-page.css
@@ -25,7 +25,7 @@
 
 .ingredients {
   padding: 20px 10px 10px;
-  background-color: lightgray;
+  background-color:  #c6ecc6;
   border-radius: 5px;
   min-height: 270px;
 }
