--- a/src/components/recipes-results-page.css
+++ b/src/components/recipes-results-page.css
@@ -14,7 +14,7 @@
 }
 
 .recipe-result {
-  background-color: lightgray;
+  background-color:  #c6ecc6;
   border-radius: 5px;
   display: inline-block;
   text-align: center;
@@ -40,9 +40,9 @@
 }
 
 .recipe-result img {
-  max-width: 90%;
   float: center;
-  padding: 10px
+  padding: 10px;
+  max-height: 65%
 }
 
 button.select-recipe-button {
