--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 	box-sizing: border-box;
 	margin: 0px;
 	/* padding: 10px; */
-	font-family: 'Roboto', sans-serif;
+	/* font-family: 'Roboto', sans-serif; */
+	font-family: 'Open Sans', sans-serif;
 }
 
 body {
@@ -13,8 +14,8 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
-	/* background: url('./cocina.gif') repeat; */
-
+	/* background-color:  #009999; */
+	/* color: white; */
 }
 
 form {
