--- a/src/components/food-container.css
+++ b/src/components/food-container.css
@@ -1,7 +1,7 @@
 .food-container {
   padding: 10px;
   display: inline-block;
-  width: 50%;
+  width: 45%;
   /* margin: 0px 0px; */
   /* border: 1px black solid; */
   border-radius: 5px;
@@ -17,11 +17,21 @@ h1.container-name {
 .food-container ul {
   /* border: 1px black solid; */
   padding: 10px;
+  list-style: none;
+}
+
+.food-title {
+  display: inline-block;
+  width: 85%;
+  background-color: #c6ecc6;
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 0px;
+
 }
 
 .food-item {
-  padding: 20px 20px 5px ;
-  list-style: none;
+  padding: 5px;
   text-align: left;
   width: 100%;
   display: inline-block;
@@ -33,21 +43,15 @@ h1.container-name {
   margin-right: auto;
 }
 
-.food-item-buttons {
-  float: right;
-  /* border: 1px black solid; */
-  margin-top: 0
-}
-
-.food-item-button {
-  margin-left: 10px;
-  /* padding: 10px; */
-  width: 25px;
-  border: 1px black solid
+.food-item:hover {
+  background-color: #009999;
+  transition: 0.2s
 }
 
 .delete-button {
-  margin-left: 10px;
+  float: right;
+  /* margin-top: 0; */
+  /* margin-left: 10px; */
   width: 25px;
-  /* border: 1px black solid */
+  margin: 10px 5px 10px 0px;
 }
