--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -1,11 +1,11 @@
 
 .landing, .registration{
-  width: 75%;
+  width: 85%;
   margin-top: 140px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 10px 40px ;
-  background: #fff6e6;
+  /* background: #c6ecc6; */
   border-radius: 5px;
 }
 
