--- a/src/components/recipe-page.css
+++ b/src/components/recipe-page.css
@@ -37,18 +37,28 @@
   vertical-align: middle;
 }
 
+.recipe-image {
+  border-radius: 5px;
+}
+
 .instructions {
   padding: 15px;
   margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
   width: 92%;
-  border: 2px lightgray solid;
+  background-color: #009999;
+  color: white;
+  border: 2px #009999 solid;
   border-radius: 5px;
 }
 
 .instructions div {
   padding: 10px
+}
+
+a {
+  color: #009999
 }
 
 @media only screen and (max-width: 768px) {
