--- a/src/components/recipes-results-page.css
+++ b/src/components/recipes-results-page.css
@@ -39,7 +39,12 @@
   display: inline-flex;
   padding: 5px;
   padding-bottom: 10px;
-  vertical-align: middle;
+  width: 100%;
+  text-align: center;
+
+}
+
+.recipe-info p {
   margin-left: auto;
   margin-right: auto;
 }
