--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 }
 
 form {
-  background-color: #e24e42;
+  background-color:  #b0281c;
 	border-radius: 5px;
   margin: 10px;
 	padding: 20px
