--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -22,24 +22,30 @@ header {
   padding: 10px;
 }
 
-.login-form, .registration-form {
+.login-form {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 10px;
+  padding: 20px 50px;
+  text-align: left;
+  background-image:
+  linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+  url('../form-image.jpg');
+  color: white;
 }
 
 .demo-info {
   padding-top: 15px;
-  font-size: 12px
+  font-size: 14px
 }
 
 .form-error {
-  /* border: 1px black solid; */
-  /* display: inline-block; */
-  /* position: absolute; */
+
   color: white;
-  font-size: 10px
+  font-size: 14px
 }
 
 @media only screen and (max-width: 768px) {
@@ -52,7 +58,9 @@ header {
   }
 
   .login-form {
-    padding: 20px 10px
+    padding: 20px;
+    text-align: center;
+
   }
 }
 
@@ -68,7 +76,8 @@ and (max-device-width : 768px) {
   }
 
   .login-form {
-    padding: 20px 10px
+    padding: 20px;
+    text-align: center;
   }
 }
 
